# AI-false-belief-tracking

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  METHODOLOGY_CHANGES.md  Makefile  README.md  RESEARCH_EXECUTION_SUMMARY.md  SETUP_GUIDE.md  pyproject.toml  requirements-virtualhome.txt  requirements.txt  test_phase2_review.py
.github/workflows/: ci.yml  virtualhome.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-core-interfaces-gridhouse/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-helper-models/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  PHASE2_REVIEW.md
.planning/phases/03-virtualhome-backend/: 03-01-ISSUES.md  03-01-PLAN.md  03-01-SUMMARY.md  (+10 more)
configs/analysis/: comprehensive.yaml  plots.yaml
configs/experiments/: exp_large_scale.yaml  exp_main.yaml  exp_phase9_test.yaml  sweep_intervention.yaml  sweep_particles.yaml
configs/generator/: default.yaml
configs/models/: belief_pf.yaml  goal_only.yaml  reactive.yaml
data/: README.md
paper/: data_analysis.md  figures_tables.md  report_template.md  research_paper.md
results/: README.md
scripts/: analyze_raw_data.py  analyze_results.py  check_data_status.py  check_experiment_status.py  check_nas.py  cleanup_repository.py  complete_phase7_redo.py  complete_regeneration.py  final_cleanup.py  final_verification.py  final_verification_complete.py  fix_paper_and_tables.py  fix_tables_and_references.py  generate_all_figures.py  generate_change_log.py  generate_phase9_figures.py  improve_table_analysis.py  install_virtualhome.py  monitor_regeneration.py  regenerate_comprehensive_analysis.py  resume_regeneration.py  run_large_experiments.py  run_phase7_complete.py  run_phase9_experiments.py  setup_venv.py  test_fixes.py  test_functionality.py  test_large_experiments.py  test_task_completion.py  update_paper_tables.py  update_paper_with_new_data.py  verify_implementation.py  verify_repository.py  verify_reproducibility.py  verify_setup.py  verify_virtualhome.py
src/bsa/: __init__.py  cli.py
tests/: test_analysis.py  test_env_interface.py  test_episode_generators.py  test_experiments.py  test_helper_agents.py  test_inference.py  test_integration.py  test_particle_filter.py  test_virtualhome.py  test_virtualhome_integration.py
(+86 files in other folders)
